--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
 								<footer>(19/06/2014)</footer>
 							</div><!-- end Item -->
 						</blockquote>
+						<a href="#">Xem Thêm</a>
 				</div>
 			</div>
 		</div>
@@ -573,7 +574,11 @@
 					</form>
 				</div>
 				<div class="col-md-6 col-xs-12">
-					<div id="map-canvas" class=""></div>
+					<a href="#" class="thumbnail">
+						<img src="assets/map.jpg" alt="">
+					</a>
+				</div>
+					
 				</div>
 			</div>
 
